refactor:结构简化，新增Index.ts和Index.cshtml

--- a/DomenicCodeGen/DomenicCodeGen.csproj
+++ b/DomenicCodeGen/DomenicCodeGen.csproj
@@ -9,5 +9,9 @@
     <None Remove="DomenicCodeGen.cs~RF9b829e8.TMP" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UnUseTemps\" />
+  </ItemGroup>
+
 
 </Project>
