--- a/DomenicCodeGen/Templates/XXEditDto.cs.template
+++ b/DomenicCodeGen/Templates/XXEditDto.cs.template
@@ -5,6 +5,7 @@
 using Abp.AutoMapper;
 using System;
 using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations;
 using System.Text;
 
 namespace ${namespace}
