--- a/DomenicCodeGen/Templates/XXManager.cs.template
+++ b/DomenicCodeGen/Templates/XXManager.cs.template
@@ -2,6 +2,7 @@
 //${namespace}
 //${entity}
 //${lowerCaseEntity}
+using Abp.Application.Services.Dto;
 using Abp.Domain.Repositories;
 using Abp.Domain.Services;
 using System;
